tests/simple_tests/syntaxError/guillemetsError.py
a = "abcd"
b = "abcd
c = "abcd"